# forsyde-modeling

./: README.md  forsyde-modeling.cabal  stack.yaml
src/: ImageProcessing.hs  Lab2.hs
test/: Spec.hs
