name:                forsyde-modeling
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Martin Yrjölä
category:            ForSyDe
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lab2
  build-depends:       ForSyDe-Shallow == 3.3.0.1
                     , base >= 4.7 && < 5
                     , transformers == 0.5.2.0
  default-language:    Haskell2010

test-suite forsyde-modeling-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ForSyDe-Shallow == 3.3.0.1
                     , base
                     , forsyde-modeling
                     , hspec >= 2.2.4
                     , transformers == 0.5.2.0
                     , silently == 1.2.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010